--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>NETFLIX CLONE</title>
 </head>
 <body>
-    
+    <!-- Criando  a Estrutura da página-->
+    <header>
+        <div class="container">
+            <h2>NETFLIX</h2>
+            <nav> <!-- Criando o menu de  navegação-->
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
