--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Criando  a Estrutura da página-->
     <header>
         <div class="container">
-            <h2>NETFLIX</h2>
+            <h2 class="Logo">NETFLIX</h2>
             <nav> <!-- Criando o menu de  navegação-->
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
