--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">Os 100</h3>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
