--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">Os 100</h3>
+                <p clss="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta.</p>
             </div>
         </div>
     </main>
