--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
                 <h3 class="titulo">Os 100</h3>
                 <p clss="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta.</p>
             </div>
+            <button>
+                ASSISTIR AGORA
+            </button>
+            <button>
+                FAÇA O DOWNLOAD
+            </button>
         </div>
     </main>
+
 </body>
 </html>
