--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <h3 class="titulo">Os 100</h3>
                 <p clss="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta.</p>
             </div>
-            <button>
+            <button role="button"class="botao"> <!-- role fixa  a função  definido -->
                 ASSISTIR AGORA
             </button>
-            <button>
+            <button role="button" class="botao">
                 FAÇA O DOWNLOAD
             </button>
         </div>
