--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">Os 100</h3>
-                <p clss="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta.</p>
-                <div class="botoes">
-                    <button role="button"class="botao"> <!-- role fixa  a função  definido -->
-                           ASSISTIR AGORA
-                   </button>
-                   <button role="button" class="botao">
-                        FAÇA O DOWNLOAD
-                   </button>
-              </div>
+                <p class="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta. <br>Em breve a nova temporada que está imperdível.</p>
+                    <div class="botoes">
+                        <button role="button"class="botao"> <!-- role fixa  a função  definido -->
+                            ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                            FAÇA O DOWNLOAD
+                    </button>
+                </div>
             </div>
         </div>
     </main>
