--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
         </div>
     </main>
 
+    <script src="https://kit.fontawesome.com/eca79e36dc.js" crossorigin="anonymous"></script>
+    <!-- Incluindo icones / personalizando -->
 </body>
 </html>
