--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                 <p class="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta. <br>Em breve a nova temporada que está imperdível.</p>
                     <div class="botoes">
                         <button role="button" class="botao"> <!-- role fixa  a função  definido -->
+                            <i class="fas fa-play"></i>
                             ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
                             FAÇA O DOWNLOAD
                     </button>
                 </div>
