--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
-                        <i class="fas fa-info-circle"></i>
+                        <i class="fas fa-cloud-download-alt"></i>
                             FAÇA O DOWNLOAD
                     </button>
                 </div>
