--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
+
+    <!-- owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>NETFLIX CLONE</title>
 </head>
 <body>
@@ -39,7 +44,11 @@
         </div>
     </main>
 
-    <script src="https://kit.fontawesome.com/eca79e36dc.js" crossorigin="anonymous"></script>
     <!-- Incluindo icones / personalizando -->
+    <script src="https://kit.fontawesome.com/eca79e36dc.js" crossorigin="anonymous"></script>
+
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+  
 </body>
 </html>
