--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
         </div>
     </main>
 
+    <div class="carrousel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="img/mini1.jpg" alt="">
+            </div>
+
+        </div>
+
+    </div>
+
     <!-- Incluindo icones / personalizando -->
     <script src="https://kit.fontawesome.com/eca79e36dc.js" crossorigin="anonymous"></script>
-
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
   
