--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="carrousel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img src="img/mini1.jpg" alt="">
+                <img class="box-filme" src="img/mini1.jpg" alt="">
             </div>
 
         </div>
