--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="https://kit.fontawesome.com/eca79e36dc.js" crossorigin="anonymous"></script>
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
   
 </body>
 </html>
