--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
 
+    <!-- Aplicando a responsividade -->
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!-- owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -37,7 +40,7 @@
                     </button>
                     <button role="button" class="botao">
                         <i class="fas fa-cloud-download-alt"></i>
-                            FAÇA O DOWNLOAD
+                            FAZER DOWNLOAD
                     </button>
                 </div>
             </div>
