--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <h3 class="titulo">Os 100</h3>
                 <p class="descricao">Quase 100 anos após um apocalipse nuclear devastar a Terra, 100 sobreviventes de uma estação espacial voltam para avaliar as condições do planeta. <br>Em breve a nova temporada que está imperdível.</p>
                     <div class="botoes">
-                        <button role="button" class="botao"> <!-- role fixa  a função  definido -->
+                        <button role="button" class="botao" a href="https://www.youtube.com/watch?v=ia1Fbg96vL0"> <!-- role fixa  a função  definido -->
+                            <i class="fas fa-film"></i>
+                            ASSISTIR TRAILER
+                    </button>
+                        <button role="button" class="botao" a href=""> <!-- role fixa  a função  definido -->
                             <i class="fas fa-play"></i>
                             ASSISTIR AGORA
                     </button>
