--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                         <i class="fas fa-cloud-download-alt"></i>
                             FAZER DOWNLOAD
                     </button>
+
+                    <div class="nota">
+                         <p>Deixe sua nota
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <i class="far fa-star"></i>
+                        </p>
+                    </div>
+                       
                 </div>
             </div>
         </div>
