--- a/index.html
+++ b/index.html
@@ -43,18 +43,16 @@
                             ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
-                        <i class="fas fa-cloud-download-alt"></i>
-                            FAZER DOWNLOAD
-                    </button>
-
-                    <div class="nota">
-                         <p>Deixe sua nota
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <i class="far fa-star"></i>
-                        </p>
-                    </div>
-                       
+                        <i class="fas fa-star"></i>
+                           <i class="fas fa-star-half-alt"></i>
+                           <i class="far fa-star"></i>
+                            DEIXE SUA NOTA 
+                   </button> 
+                </button>
+                <button role="button" class="botao" a href=""> <!-- role fixa  a função  definido -->
+                    <i class="fas fa-cloud-download-alt"></i>
+                    DOWNLOAD
+            </button>   
                 </div>
             </div>
         </div>
